# neighborhood_cli

./: Cargo.toml  README.org  user_apps.html
.cargo/: config.toml
.github/workflows/: build-release.yml
src/: api.rs  cache.rs  directories.rs  env.rs  ext.rs  main.rs  subcommand.rs  value_parser.rs  zeroizing.rs
src/subcommand/: auth.rs  devlog.rs  project.rs  ship.rs  tag.rs
src/subcommand/project/: post.rs  update.rs
src/subcommand/project/post/: devlog.rs  release.rs
src/subcommand/project/update/: devlog.rs  release.rs
src/subcommand/ship/: edit.rs
