[package]
name = "neighborhood_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = { version = "1.0.1", default-features = false }
clap = { version = "4.5.40", default-features = false, features = ["color", "help", "std", "string", "suggestions", "usage"] }
dirs = { version = "6.0.0", default-features = false }
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "http2", "json", "multipart", "rustls-tls"] }
rustyline = { version = "16.0.0", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
toml = { version = "0.8.23", default-features = false }
url = { version = "2.5.4", default-features = false }
