[package]
name = "neighborhood_cli"
version = "1.0.1"
edition = "2024"

[dependencies]
cfg-if = { version = "1.0.1", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
clap = { version = "4.5.40", default-features = false, features = ["color", "help", "std", "string", "suggestions", "usage", "wrap_help"] }
dirs = { version = "6.0.0", default-features = false }
futures-lite = { version = "2.6.0", default-features = false }
mime_guess = { version = "2.0.5", default-features = false }
reqwest = { version = "0.12.20", default-features = false, features = ["blocking", "http2", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
tempfile = { version = "3.20.0", default-features = false }
tokio = { version = "1.45.1", features = ["fs", "rt"], default-features = false }
# toml = { version = "0.8.23", default-features = false, features = ["parse"] }
toml_edit = { version = "0.22.27", default-features = false, features = ["parse", "serde"] }
